# voicevox_core

./: annotated.html  annotated_dup.js  classes.html  core_8h.html  core_8h.js  core_8h__incl.map  core_8h__incl.md5  core_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structVoicevoxAudioQueryOptions.html  structVoicevoxAudioQueryOptions.js  structVoicevoxInitializeOptions.html  structVoicevoxInitializeOptions.js  structVoicevoxSynthesisOptions.html  structVoicevoxSynthesisOptions.js  structVoicevoxTtsOptions.html  structVoicevoxTtsOptions.js
.github/actions/deploy/: action.yml
.github/actions/download-cuda-libraries/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: build_and_deploy.yml  download_test.yml  generate_document.yml  test.yml  update_rust_toolchain.yml
crates/openjtalk-sys/: build.rs
crates/openjtalk-sys/openjtalk/: CMakeLists.txt
crates/openjtalk-sys/src/: lib.rs
scripts/downloads/: download.sh
search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js
